--- a/_sass/elements/_typography.scss
+++ b/_sass/elements/_typography.scss
@@ -48,6 +48,10 @@ p {
       margin: 2em 0;
     }
   }
+
+  main & {
+    padding: 0 1rem;
+  }
 }
 
 
